# labelme_scripts

./: .gitignore  check_annot_dims.py  check_annot_with_class.py  check_bbox.py  check_empty_annot.py  compare_annot_to_img.py  compare_dir_basenames.py  copy_dir.py  labelme_resize.py  labelme_to_coco.py  resize.py
coco/: coco_format.json  coco_partition.py  coco_raw_test.py  coco_test.py  labelme_to_coco.py
to_json/: CMakeLists.txt  labelme_to_json.py  read_labelme_json.cpp
